<resources>
    <string name="app_name">WeeWee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_et_hint">Email</string>
    <string name="password_et_hint">Пароль</string>
    <string name="et_lastname_hint">Фамилия</string>
    <string name="et_firstname_hint">Имя</string>
    <string name="et_patronymic_hint">Отчество</string>
    <string name="et_confirmpassword_hint">Подтвердите пароль</string>
    <string name="show_password_checkbox">Показать пароль</string>
    <string name="register_button_text">Регистрация</string>
    <string name="login_button_text">Войти</string>
    <string name="authorization_login_fragment_title">Авторизация</string>
    <string name="registration_register_fragment_title">Регистрация</string>
    <string name="profile_fragment_title">Профиль</string>
</resources>